# VitaCrew

./: .gitignore  AGENTS_TASKS_TOOLS.md  BACKEND.md  FRONTEND.md  README.md  hello.py  pyproject.toml
src/vitacrew/: crew.py  main.py
src/vitacrew/config/: agents.yaml
src/vitacrew/tools/: custom_tool.py
vitacrew/: README.md  pyproject.toml
vitacrew/src/gui/: vitacrew_app.py
vitacrew/src/vitacrew/: crew.py  main.py
vitacrew/src/vitacrew/config/: tasks.yaml
vitacrew/src/vitacrew/tests/: __init__.py  test_tasks.py
