[project]
name = "vitacrew"
version = "0.1.0"
description = "VitaCrew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
vitacrew = "vitacrew.main:run"
run_crew = "vitacrew.main:run"
train = "vitacrew.main:train"
replay = "vitacrew.main:replay"
test = "vitacrew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
